<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dr_urdf</name>
  <version>0.0.0</version>
  <description>Doosan e0509 + RH-P12-RN-A combined URDF</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>TODO: License declaration</license>

  <!-- 테스트 의존성 -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 실행 시 필요한 패키지들 -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>dsr_description2</exec_depend>
  <exec_depend>rh_p12_rn_a_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
